搜索组件提交

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=E4805d16520de693a3fe707cdc962045"></script>
+    <script type="text/javascript" src="//api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
+    <link rel="stylesheet" href="//api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" /> -->
     <title>TopEvery Ui</title>
   </head>
   <body>
@@ -14,4 +17,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+  <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=71ce4e39b5be9ddfb56e3169cafc3922"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js" charset="utf-8"></script>
 </html>
