--- a/public/index.html
+++ b/public/index.html
@@ -19,4 +19,5 @@
   </body>
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=71ce4e39b5be9ddfb56e3169cafc3922"></script>
   <script type="text/javascript" src="https://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="https://api.map.baidu.com/library/LuShu/1.2/src/LuShu_min.js"></script>
 </html>
