--- a/public/cube.html
+++ b/public/cube.html
@@ -89,12 +89,7 @@
 </head>
 <body>
   <div class="cube">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div style="text-align: center;"> 测试 </div>
   </div>
 </body>
 </html>
