--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=71ce4e39b5be9ddfb56e3169cafc3922"></script>
   <script type="text/javascript" src="https://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js" charset="utf-8"></script>
   <script type="text/javascript" src="https://api.map.baidu.com/library/LuShu/1.2/src/LuShu_min.js"></script>
-  <script src='https://v.car900.com/api/byskplayer.js'></script>
+  <script src="js/byskplayer.js"></script>
   <script>
     (function (doc, win) {
     win.Byskplayer = byskplayer
